--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -221,7 +221,7 @@ jobs:
 
   smoke-tests:
     needs: [build]
-    uses: weaveworks/weave-gitops-enterprise/.github/workflows/acceptance-test.yaml@main
+    uses: weaveworks/weave-gitops-enterprise/.github/workflows/acceptance-test.yaml@add_gitlab_workflows
     with:
       runs-on: ubuntu-latest
       os-name: linux
@@ -245,9 +245,65 @@ jobs:
       WGE_GITHUB_PASSWORD: ${{ secrets.WGE_GITHUB_PASSWORD }}
       WGE_GITHUB_MFA_KEY: ${{ secrets.WGE_GITHUB_MFA_KEY }}
 
+  smoke-tests-gitlab:
+    needs: [build]
+    uses: weaveworks/weave-gitops-enterprise/.github/workflows/acceptance-test.yaml@add_gitlab_workflows
+    with:
+      runs-on: ubuntu-latest
+      os-name: linux
+      timeout-minutes: 90
+      focus-or-skip: "-ginkgo.focus='@smoke'"
+      kubectl-version: "v1.22.0"
+      git-provider: gitlab
+      git-provider_hostname: gitlab.com
+      cluster_resource_set: true
+      management-cluster-kind: kind
+      gitops-bin-path: /usr/local/bin/gitops
+      database-type: sqlite
+      artifacts-base-dir: "/tmp/acceptance-test-gitlab"
+    secrets:
+      BUILD_BOT_USER: wge-build-bot
+      BUILD_BOT_PERSONAL_ACCESS_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
+      WGE_GITHUB_TOKEN: ${{ secrets.WGE_GITHUB_TOKEN }}
+      WGE_GIT_PROVIDER_PRIVATE_KEY: ${{ secrets.WGE_SAS_GITLAB_PRIVATE_KEY }}
+      WGE_GITLAB_TOKEN: ${{ secrets.WGE_SAS_GITLAB_TOKEN }}
+      WGE_GITLAB_ORG: ${{ secrets.WGE_SAS_GITLAB_ORG }}
+      WGE_GITLAB_USER: ${{ secrets.WGE_SAS_GITLAB_USER }}
+      WGE_GITLAB_PASSWORD: ${{ secrets.WGE_SAS_GITLAB_PASSWORD }}
+      WGE_GITLAB_CLIENT_ID: ${{ secrets.WGE_SAS_GITLAB_CLIENT_ID }}
+      WGE_GITLAB_CLIENT_SECRET: ${{ secrets.WGE_SAS_GITLAB_CLIENT_SECRET }}
+
+  smoke-tests-gitlab-on-prem:
+    needs: [build]
+    uses: weaveworks/weave-gitops-enterprise/.github/workflows/acceptance-test.yaml@add_gitlab_workflows
+    with:
+      runs-on: ubuntu-latest
+      os-name: linux
+      timeout-minutes: 90
+      focus-or-skip: "-ginkgo.focus='@smoke'"
+      kubectl-version: "v1.22.0"
+      git-provider: gitlab
+      git-provider_hostname: gitlab.git.dev.wkp.weave.works
+      cluster_resource_set: true
+      management-cluster-kind: kind
+      gitops-bin-path: /usr/local/bin/gitops
+      database-type: sqlite
+      artifacts-base-dir: "/tmp/acceptance-test-gitlab-on-prem"
+    secrets:
+      BUILD_BOT_USER: wge-build-bot
+      BUILD_BOT_PERSONAL_ACCESS_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
+      WGE_GITHUB_TOKEN: ${{ secrets.WGE_GITHUB_TOKEN }}
+      WGE_GIT_PROVIDER_PRIVATE_KEY: ${{ secrets.WGE_ON_PREM_GITLAB_PRIVATE_KEY }}
+      WGE_GITLAB_TOKEN: ${{ secrets.WGE_ON_PREM_GITLAB_TOKEN }}
+      WGE_GITLAB_ORG: ${{ secrets.WGE_ON_PREM_GITLAB_ORG }}
+      WGE_GITLAB_USER: ${{ secrets.WGE_ON_PREM_GITLAB_USER }}
+      WGE_GITLAB_PASSWORD: ${{ secrets.WGE_ON_PREM_GITLAB_PASSWORD }}
+      WGE_GITLAB_CLIENT_ID: ${{ secrets.WGE_ON_PREM_GITLAB_CLIENT_ID }}
+      WGE_GITLAB_CLIENT_SECRET: ${{ secrets.WGE_ON_PREM_GITLAB_CLIENT_SECRET }}
+
   acceptance-tests-github:
     needs: [build, lint, unit-tests, integration-tests, ui-integration-tests]
-    uses: weaveworks/weave-gitops-enterprise/.github/workflows/acceptance-test.yaml@main
+    uses: weaveworks/weave-gitops-enterprise/.github/workflows/acceptance-test.yaml@add_gitlab_workflows
     with:
       runs-on: ubuntu-latest
       os-name: linux
