--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -61,10 +61,8 @@
     "mini-css-extract-plugin": "~2.4.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "parcel serve src/index.html --port 3000",
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -95,7 +93,10 @@
     ]
   },
   "devDependencies": {
+    "@parcel/config-default": "^2.2.1",
+    "@parcel/transformer-svg-react": "^2.2.1",
     "express": "^4.17.1",
-    "http-proxy-middleware": "^2.0.0"
+    "http-proxy-middleware": "^2.0.0",
+    "parcel": "^2.2.1"
   }
 }
