--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -251,7 +251,7 @@ jobs:
     with:
       runs-on: ubuntu-latest
       os-name: linux
-      timeout-minutes: 90
+      timeout-minutes: 60
       focus-or-skip: "-ginkgo.focus='@smoke'"
       kubectl-version: "v1.22.0"
       git-provider: gitlab
@@ -260,7 +260,7 @@ jobs:
       management-cluster-kind: kind
       gitops-bin-path: /usr/local/bin/gitops
       database-type: sqlite
-      artifacts-base-dir: "/tmp/acceptance-test-gitlab"
+      artifacts-base-dir: "/tmp/smoke-test-gitlab"
     secrets:
       BUILD_BOT_USER: wge-build-bot
       BUILD_BOT_PERSONAL_ACCESS_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
@@ -279,7 +279,7 @@ jobs:
     with:
       runs-on: ubuntu-latest
       os-name: linux
-      timeout-minutes: 90
+      timeout-minutes: 60
       focus-or-skip: "-ginkgo.focus='@smoke'"
       kubectl-version: "v1.22.0"
       git-provider: gitlab
@@ -288,7 +288,7 @@ jobs:
       management-cluster-kind: kind
       gitops-bin-path: /usr/local/bin/gitops
       database-type: sqlite
-      artifacts-base-dir: "/tmp/acceptance-test-gitlab-on-prem"
+      artifacts-base-dir: "/tmp/smoke-test-gitlab-on-prem"
     secrets:
       BUILD_BOT_USER: wge-build-bot
       BUILD_BOT_PERSONAL_ACCESS_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
