Add pkg to cluster-service Dockerfile

--- a/cmd/clusters-service/Dockerfile
+++ b/cmd/clusters-service/Dockerfile
@@ -25,6 +25,7 @@ COPY go.sum /workspace/go.sum
 
 # copy in other module dependencies
 COPY common/ /workspace/common/
+COPY pkg/ /workspace/pkg/
 
 # cache modules
 RUN go mod download
