--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,6 +39,10 @@ jobs:
       with:
         fetch-depth: 0
         ref: ${{ github.event.pull_request.head.sha }}
+    - name: Unshallow
+        run: |
+          git fetch --prune --unshallow
+          git fetch --tags -f
     - name: build
       run: |
         make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/clusters-service/.uptodate
@@ -62,6 +66,10 @@ jobs:
       with:
         fetch-depth: 0
         ref: ${{ github.event.pull_request.head.sha }}
+    - name: Unshallow
+        run: |
+          git fetch --prune --unshallow
+          git fetch --tags -f
     - name: build
       run: |
         make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/event-writer/.uptodate
@@ -94,6 +102,10 @@ jobs:
       with:
         fetch-depth: 0
         ref: ${{ github.event.pull_request.head.sha }}
+    - name: Unshallow
+        run: |
+          git fetch --prune --unshallow
+          git fetch --tags -f
     - name: Go Build Cache
       uses: actions/cache@v2
       with:
@@ -144,6 +156,10 @@ jobs:
       with:
         fetch-depth: 0
         ref: ${{ github.event.pull_request.head.sha }}
+    - name: Unshallow
+        run: |
+          git fetch --prune --unshallow
+          git fetch --tags -f
     - name: Go Build Cache
       uses: actions/cache@v2
       with:
