--- a/cmd/clusters-service/Dockerfile
+++ b/cmd/clusters-service/Dockerfile
@@ -26,6 +26,7 @@ COPY go.sum /workspace/go.sum
 # copy in other module dependencies
 COPY common/ /workspace/common/
 COPY pkg/ /workspace/pkg/
+COPY pkg/ /dist
 
 # cache modules
 RUN go mod download
