--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -116,6 +116,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.WGE_NPM_GITHUB_TOKEN }}
       run: |
+        echo "${GITHUB_TOKEN}"
         make GITHUB_TOKEN=${GITHUB_TOKEN} GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/ui-server/.uptodate
     - name: Login to Docker Hub
       uses: docker/login-action@v1
