--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,7 +43,9 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.WGE_NPM_GITHUB_TOKEN }}
       run: |
-        echo "${GITHUB_TOKEN}"
+        echo "HIHI"
+        echo "here is the github token: ${GITHUB_TOKEN}"
+        echo "that was the github token"
         make GITHUB_TOKEN=${GITHUB_TOKEN} GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/clusters-service/.uptodate
     - name: Login to Docker Hub
       uses: docker/login-action@v1
