--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,10 +43,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.WGE_NPM_GITHUB_TOKEN }}
       run: |
-        echo "HIHI"
-        echo "here is the github token: ${GITHUB_TOKEN}"
-        echo "that was the github token"
-        make GITHUB_TOKEN=${GITHUB_TOKEN} GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/clusters-service/.uptodate
+        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/clusters-service/.uptodate
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
@@ -119,8 +116,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.WGE_NPM_GITHUB_TOKEN }}
       run: |
-        echo "${GITHUB_TOKEN}"
-        make GITHUB_TOKEN=${GITHUB_TOKEN} GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/ui-server/.uptodate
+        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/ui-server/.uptodate
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
