Add a root route to serve the ui from the clusters-service (#463)
* Add a route for ui in cluster-service mux

* Add ui-cra/build to Makefile and cluster-service Dockerfile

* add cd ui-cra

* Update Makefile

Co-authored-by: Simon <footless@gmail.com>

* Update cmd/clusters-service/Dockerfile

Co-authored-by: Simon <footless@gmail.com>

* Update cmd/clusters-service/Dockerfile

Co-authored-by: Simon <footless@gmail.com>

* adds github env secret

* GITHUB_TOKEN for real

* need the keep file

* where that token

* wrong fn

* more token

* refs refs refs

* fixes some routes

Co-authored-by: Simon <footless@gmail.com>

--- a/cmd/clusters-service/Dockerfile
+++ b/cmd/clusters-service/Dockerfile
@@ -35,6 +35,7 @@ COPY cmd/clusters-service/main.go main.go
 COPY cmd/clusters-service/api/ api/
 COPY cmd/clusters-service/app/ app/
 COPY cmd/clusters-service/pkg/ pkg/
+COPY ui-cra/build app/dist
 
 ARG version
 # build
