--- a/charts/mccp/templates/clusters-service/internal-ingress.yaml
+++ b/charts/mccp/templates/clusters-service/internal-ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- if eq (include "common.ingress.supportsIngressClassAnnotation" .) "true" }}
     kubernetes.io/ingress.class: mccp-nginx
     {{- end }}
-    nginx.ingress.kubernetes.io/rewrite-target: /v1/$1
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
   labels:
     app: clusters-service
   name: clusters-service
@@ -18,6 +18,6 @@ spec:
   rules:
     - http:
         paths:
-          - path: /v1/?(.*)
+          - path: /?(.*)
             pathType: ImplementationSpecific
             backend: {{- include "common.ingress.backend" (dict "serviceName" "clusters-service" "servicePort" 8000 "context" $)  | nindent 14 }}
