--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -3,12 +3,11 @@
 # Declare variables to be passed into your templates.
 
 imagePullSecrets: []
-nameOverride: ''
-fullnameOverride: ''
+nameOverride: ""
+fullnameOverride: ""
 
 images:
   eventWriter: docker.io/weaveworks/weave-gitops-enterprise-event-writer:v2.5.0
-  gitopsRepoBroker: docker.io/weaveworks/weave-gitops-enterprise-gitops-repo-broker:v2.5.0
   clustersService: docker.io/weaveworks/weave-gitops-enterprise-clusters-service:v0.0.2
   clusterBootstrapController: docker.io/weaveworks/cluster-bootstrap-controller:v0.0.3
 
@@ -48,19 +47,12 @@ config:
       injectPruneAnnotation: enabled
     clusters:
       namespace: default
-    repositoryURL: ''
-    repositoryApiURL: ''
-    repositoryPath: ''
+    repositoryURL: ""
+    repositoryApiURL: ""
+    repositoryPath: ""
     baseBranch: main
   checkpoint:
     enabled: true
-
-gitopsRepoBroker:
-  gitRepo:
-    url: ''
-    branch: ''
-  gitDeployKeySecretName: ''
-  sshConfigMapName: ''
 
 agentTemplate:
   natsScheme: nats
@@ -69,7 +61,7 @@ agentTemplate:
 nats:
   auth:
     enabled: true
-    user: ''
+    user: ""
     token: $NATS_AUTH_TOKEN
   client:
     service:
@@ -79,22 +71,4 @@ nats:
 nginx-ingress-controller:
   ingressClass: mccp-nginx
   config:
-    ssl-redirect: 'false'
-
-wkp-ui:
-  server:
-    htmlRootPath: html/mccp
-  image:
-    tag: v2.5.0
-    pullSecrets: []
-  ingress:
-    annotations:
-      kubernetes.io/ingress.class: mccp-nginx
-  config:
-    featureGates:
-      # only enable the mccp
-      fleetManagement: true
-      dashboard: false
-      teamWorkspaces: false
-    clusterInfo:
-      name: 'MCCP'
+    ssl-redirect: "false"
