--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -75,7 +75,7 @@ jobs:
       run: |
         docker push docker.io/weaveworks/weave-gitops-enterprise-event-writer:$(./tools/image-tag)
 
-  ui-server:
+  gitops-agent:
     runs-on: ubuntu-latest
     steps:
     - id: cache-paths
@@ -102,58 +102,8 @@ jobs:
         key: ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-
-    - name: Yarn Cache
-      uses: actions/cache@v2
-      with:
-        path: ${{ steps.cache-paths.outputs.dir }}
-        key: ${{ runner.os }}-${{ env.YARN_CACHE_NAME }}-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-${{ env.YARN_CACHE_NAME }}-
-    - name: build
-      env:
-        GITHUB_TOKEN: ${{ secrets.WGE_NPM_GITHUB_TOKEN }}
+    - name: Build the agent
       run: |
-        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/ui-server/.uptodate
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        registry: docker.io
-        username: ${{ secrets.WGE_DOCKER_IO_USER }}
-        password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
-    - name: Push images to docker registry
-      run: |
-        docker push docker.io/weaveworks/weave-gitops-enterprise-ui-server:$(./tools/image-tag)
-
-  gitops-broker-and-agent:
-    runs-on: ubuntu-latest
-    steps:
-    - id: cache-paths
-      run: |
-        echo "::set-output name=dir::$(yarn cache dir)"
-        echo "::set-output name=go-build::$(go env GOCACHE)"
-        echo "::set-output name=go-mod::$(go env GOMODCACHE)"
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17.x
-    - name: Configure git for private modules
-      run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Go Build Cache
-      uses: actions/cache@v2
-      with:
-        path: |
-          ${{ steps.cache-paths.outputs.go-build }}
-          ${{ steps.cache-paths.outputs.go-mod }}
-        key: ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-
-    - name: Build all the services
-      run: |
-        make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/gitops-repo-broker/.uptodate
         make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/wkp-agent/.uptodate
     - name: Install Helm v3
       uses: azure/setup-helm@v1
