--- a/charts/mccp/Chart.yaml
+++ b/charts/mccp/Chart.yaml
@@ -21,15 +21,12 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: '1.16.0'
+appVersion: "1.16.0"
 
 dependencies:
   - name: nats
-    version: '6.1.2'
-    repository: 'https://charts.bitnami.com/bitnami'
+    version: "6.1.2"
+    repository: "https://charts.bitnami.com/bitnami"
   - name: nginx-ingress-controller
-    version: '7.6.21'
+    version: "7.6.21"
     repository: https://charts.bitnami.com/bitnami
-  - name: wkp-ui
-    version: '0.1.0'
-    repository: 'file://../../ui/chart/wkp-ui'
