--- a/cmd/clusters-service/Dockerfile
+++ b/cmd/clusters-service/Dockerfile
@@ -38,6 +38,7 @@ COPY cmd/clusters-service/pkg/ pkg/
 COPY ui-cra/build app/dist
 
 ARG version
+ARG image_tag
 # build
 RUN CGO_ENABLED=1 go build -ldflags "-X 'github.com/weaveworks/weave-gitops-enterprise/cmd/clusters-service/pkg/version.Version=$version -X github.com/weaveworks/weave-gitops-enterprise/pkg/version.ImageTag=$image_tag' -linkmode external -w -extldflags \"-static\"" -tags netgo -a -o clusters-service main.go
 
