--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -63,7 +63,8 @@ jobs:
           file: ./cmd/clusters-service/Dockerfile
           push: true
           secrets: |
-            "GITHUB_BUILD_TOKEN=${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}"
+            "npmrc=@weaveworks:registry=https://npm.pkg.github.com
+            //npm.pkg.github.com/:_authToken=${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}"
           build-args: |
             "version=${{ steps.lookup-vars.outputs.version }}"
             "image_tag=${{ steps.lookup-vars.outputs.image_tag }}"
