--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,7 +64,7 @@ jobs:
           push: true
           secrets: |
             "npmrc=@weaveworks:registry=https://npm.pkg.github.com
-            //npm.pkg.github.com/:_authToken=${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}"
+            //npm.pkg.github.com/:_authToken=${{ secrets.WGE_NPM_GITHUB_TOKEN }}"
           build-args: |
             "version=${{ steps.lookup-vars.outputs.version }}"
             "image_tag=${{ steps.lookup-vars.outputs.image_tag }}"
