back to build args

--- a/cmd/clusters-service/Dockerfile
+++ b/cmd/clusters-service/Dockerfile
@@ -5,11 +5,10 @@ FROM node:14.19 as node_with_modules
 WORKDIR /workspace/
 
 # Copy package.json stuff and install modules
-COPY ui-cra/package.json ui-cra/yarn.lock ui-cra/
+COPY ui-cra/.npmrc ui-cra/package.json ui-cra/yarn.lock ui-cra/
 
-RUN --mount=type=secret,id=npmrc,target=/root/.npmrc yarn config set network-timeout 300000 && \
-  cd ui-cra && \
-  yarn install --frozen-lockfile
+ARG GITHUB_BUILD_TOKEN
+RUN yarn config set network-timeout 300000 && cd ui-cra && GITHUB_TOKEN=$GITHUB_BUILD_TOKEN yarn install --frozen-lockfile
 
 # --
 # -- golang build env
@@ -18,8 +17,8 @@ FROM golang:1.17.1 as go_with_modules
 WORKDIR /workspace/
 
 ENV GITHUB_BUILD_USERNAME=wge-build-bot
-RUN --mount=type=secret,id=GITHUB_BUILD_TOKEN \
-  git config --global url."https://${GITHUB_BUILD_USERNAME}:$(cat /run/secrets/GITHUB_BUILD_TOKEN)@github.com".insteadOf "https://github.com"
+ARG GITHUB_BUILD_TOKEN
+RUN git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
 
 # copy modules manifests
 COPY go.mod /workspace/go.mod
@@ -38,12 +37,13 @@ FROM node_with_modules as node_builder
 WORKDIR /workspace/ui-cra
 
 ARG version
+ARG GITHUB_BUILD_TOKEN
 
 # Copy source and supporting files and build
 COPY ui-cra/tsconfig.json .
 COPY ui-cra/src src
 COPY ui-cra/public public
-RUN REACT_APP_VERSION=$version yarn build
+RUN GITHUB_TOKEN=$GITHUB_BUILD_TOKEN REACT_APP_VERSION=$version yarn build
 
 # --
 # -- build go
