--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,6 +46,7 @@ jobs:
         run: |
           echo "::set-output name=version::$(git describe --always --match "v*" | sed 's/^[^0-9]*//')"
           echo "::set-output name=revision::$(git rev-parse HEAD)"
+          echo "::set-output name=GITHUB_BUILD_TOKEN::${{ secrets.WGE_NPM_GITHUB_TOKEN }}"
           echo "::set-output name=now::$(date -u +"%Y-%m-%dT%H:%M:%SZ")"
           echo "::set-output name=image_tag::$(./tools/image-tag)"
       - name: Login to Docker Hub
@@ -62,13 +63,11 @@ jobs:
           context: .
           file: ./cmd/clusters-service/Dockerfile
           push: true
-          secrets: |
-            "npmrc=@weaveworks:registry=https://npm.pkg.github.com
-            //npm.pkg.github.com/:_authToken=${{ secrets.WGE_NPM_GITHUB_TOKEN }}"
           build-args: |
             "version=${{ steps.lookup-vars.outputs.version }}"
             "image_tag=${{ steps.lookup-vars.outputs.image_tag }}"
             "revision=${{ steps.lookup-vars.outputs.revision }}"
+            "GITHUB_BUILD_TOKEN=${{ steps.lookup-vars.outputs.GITHUB_BUILD_TOKEN }}"
             "now=${{ steps.lookup-vars.outputs.now }}"
           tags: weaveworks/weave-gitops-enterprise-clusters-service:${{ steps.lookup-vars.outputs.image_tag }}
           cache-from: type=gha
