--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -58,6 +58,14 @@ jobs:
           password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        id: cache
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-ghcache-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-ghcache-
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
@@ -72,107 +80,13 @@ jobs:
             "NPM_GITHUB_TOKEN=${{ steps.lookup-vars.outputs.NPM_GITHUB_TOKEN }}"
             "now=${{ steps.lookup-vars.outputs.now }}"
           tags: weaveworks/weave-gitops-enterprise-clusters-service:${{ steps.lookup-vars.outputs.image_tag }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+      - # Temp fix
+        # https://github.com/docker/build-push-action/issues/252
+        # https://github.com/moby/buildkit/issues/1896
+        name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
-  event-writer:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Configure git for private modules
-        run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Grab all tags from git
-        run: |
-          git fetch --tags -f
-      - name: build
-        run: |
-          make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/event-writer/.uptodate
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          registry: docker.io
-          username: ${{ secrets.WGE_DOCKER_IO_USER }}
-          password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
-      - name: Push images to docker registry
-        run: |
-          docker push docker.io/weaveworks/weave-gitops-enterprise-event-writer:$(./tools/image-tag)
-
-  gitops-broker-and-agent:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Stub
-        run: |
-          echo "Stub until we update corp to not require this task"
-
-  ui-server:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Stub
-        run: |
-          echo "Stub until we update corp to not require this task"
-
-  gitops-agent:
-    runs-on: ubuntu-latest
-    steps:
-      - id: cache-paths
-        run: |
-          echo "::set-output name=dir::$(yarn cache dir)"
-          echo "::set-output name=go-build::$(go env GOCACHE)"
-          echo "::set-output name=go-mod::$(go env GOMODCACHE)"
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.17.x
-      - name: Configure git for private modules
-        run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Grab all tags from git
-        run: |
-          git fetch --tags -f
-      - name: Go Build Cache
-        uses: actions/cache@v2
-        with:
-          path: |
-            ${{ steps.cache-paths.outputs.go-build }}
-            ${{ steps.cache-paths.outputs.go-mod }}
-          key: ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ github.job }}-${{ env.GO_CACHE_NAME }}-
-      - name: Build the agent
-        run: |
-          make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} cmd/wkp-agent/.uptodate
-      - name: Install Helm v3
-        uses: azure/setup-helm@v1
-        with:
-          version: v3.5.4
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.WGE_S3_AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.WGE_S3_AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1
-      - name: Publish helm chart to s3
-        run: |
-          git fetch --tags --force
-          TAG=$(git describe --always --match "v*")
-
-          CHART_VALUES_PATH=./charts/mccp/values.yaml
-          # Update the MCCP chart values.yaml file with the current image tag
-          make update-mccp-chart-values CHART_VALUES_PATH=$CHART_VALUES_PATH
-
-          # Publish the MCCP Helm v3 chart
-          ./bin/publish-chart-to-s3.sh $TAG $HELM_REPO ./charts/mccp
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          registry: docker.io
-          username: ${{ secrets.WGE_DOCKER_IO_USER }}
-          password: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
-      - name: Push images to docker registry
-        run: make push
