--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -10,28 +10,24 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
-    "@material-ui/system": "^4.12.1",
+    "@material-ui/styles": "^4.11.4",
     "@primer/octicons-react": "9.6.0",
     "@rjsf/core": "^2.5.1",
     "@rjsf/material-ui": "^2.5.1",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "@types/classnames": "^2.3.1",
     "@types/d3-scale": "^3.2.2",
     "@types/git-url-parse": "9.0.0",
-    "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.169",
-    "@types/node": "^12.0.0",
     "@types/query-string": "^6.3.0",
-    "@types/randomcolor": "^0.5.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-jsonschema-form": "^1.7.5",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "@weaveworks/weave-gitops": "0.6.1",
+    "classnames": "^2.3.1",
     "d3-scale": "3.2.1",
+    "d3-time": "^3.0.0",
     "git-url-parse": "11.1.2",
     "http-proxy-middleware": "^2.0.0",
     "js-file-download": "^0.4.12",
@@ -39,12 +35,9 @@
     "lodash": "^4.17.21",
     "moment": "2.25.3",
     "polished": "3.6.3",
-    "postcss-normalize": "~10.0.1",
-    "prettier": "^2.3.0",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-jsonschema-form": "^1.8.1",
     "react-lottie-player": "^1.3.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "~5.0.0",
@@ -96,6 +89,7 @@
   },
   "devDependencies": {
     "express": "^4.17.1",
-    "http-proxy-middleware": "^2.0.0"
+    "http-proxy-middleware": "^2.0.0",
+    "prettier": "^2.3.0"
   }
 }
